--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="midnightblue">#2c3e50</color>
     <color name="lightblue">#6a99cb</color>
     <color name="lightyellow">#b5b439</color>
-    <color name="greenflat">#16a085</color>
+    <color name="greenflat">#16A085</color>
     <color name="darkblue">#487eb0</color>
     <color name="logoblue">#2c9fff</color>
 </resources>
