--- a/app/src/main/res/layout/fragment_anime_info.xml
+++ b/app/src/main/res/layout/fragment_anime_info.xml
@@ -239,7 +239,7 @@
         android:id="@+id/loadingScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#CC000000"
+        android:background="@color/transparent_black"
         android:visibility="visible">
 
         <ProgressBar
