--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:title="Search Anime"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:id="@+id/search_anime"/>
+    <group>
+        <item
+            android:title="Anime Top List"
+            app:showAsAction="ifRoom"
+            android:icon="@drawable/ic_oscar"
+            android:id="@+id/anime_top_list"/>
 
-    <item
-        android:title="Anime Top List"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:id="@+id/anime_top_list"/>
+        <item
+            android:title="Anime by Genre"
+            app:showAsAction="ifRoom"
+            android:icon="@drawable/ic_popcorn"
+            android:id="@+id/anime_by_genre"/>
+        <item
+            android:title="Anime Schedule"
+            app:showAsAction="ifRoom"
+            android:icon="@drawable/ic_calendar"
+            android:id="@+id/anime_schedule"/>
 
-    <item
-        android:title="Anime by Genre"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:id="@+id/anime_by_genre"/>
+    </group>
 
-    <item
-        android:title="Search User"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:id="@+id/search_user"/>
-
-    <item
-        android:title="Anime Schedule"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:id="@+id/anime_schedule"/>
+    <item android:title="Search">
+        <menu>
+            <item
+                android:title="Search Anime"
+                app:showAsAction="ifRoom"
+                android:icon="@drawable/ic_launcher_foreground"
+                android:id="@+id/search_anime"/>
+            <item
+                android:title="Search User"
+                app:showAsAction="ifRoom"
+                android:icon="@drawable/ic_launcher_foreground"
+                android:id="@+id/search_user"/>
+        </menu>
+    </item>
 
 </menu>
