--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="greenflat">#16A085</color>
     <color name="darkblue">#487eb0</color>
     <color name="logoblue">#2c9fff</color>
+
+    <color name="transparent_black">#CC000000</color>
 </resources>
