--- a/app/src/main/res/layout/fragment_anime_schedule.xml
+++ b/app/src/main/res/layout/fragment_anime_schedule.xml
@@ -36,7 +36,7 @@
         android:id="@+id/loadingScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/transparent_black"
+        android:background="@android:color/white"
         android:visibility="visible">
 
         <ProgressBar
